improved key mapping, refactored drawing